      remove the graphite-client, container is no longer needed
    - fix typos
    - fix bug with template_directory
    - enable grafana5
    - the grafana-client used now ruby erb templates insteed prepared json files

  - carbon-client
    - code optimizations
    - add support for CoreMedia/cms#13125

  - remove cm-external-discover container (is no longer needed)

  - https support for webservice

  - more documentations


1804

- add more documentations
- bugfix for icinga2 memory check
- update to grafana 5.0.4
- update icingaweb2
- set warning and critical values in some icinga2 checks
- add max feeder elements for CAE Feeders
- add this web UI
- add Background Feeder graphs for Content Feeder
- remove 'used UAPI Cache' from Grafana Overview


1806

- update to grafana 5.1.3
- grafana folder support
- set grafana 5 as default
- split annotations into more types
- update to icinga2 2.8.4
- update to icingaweb2 2.5.3
- update to jolokia 1.5.0
- update to graphite 1.1.3
- jolokia supports now authentication
- update to grafana gem 0.10.1
- update to icinga2 gem 1.0.0
- add new documentations container
  - including the stack documentation and a operation guide
- support node_exporter v0.16.x


1808

- updates for mongodb 3.6
  - MongoDB 3.6 removes the deprecated HTTP interface and REST API to MongoDB
    we support now the official ruby client
- support alpine 3.8
- update to grafana 5.2.2
- update to icinga2 2.9.1
- update to icingaweb2 1.6.1
- update to jolokia 1.6.0
- updates for mongodb 3.6 (remove deprecated HTTP interface and REST API)
- updates for more than one node deployment
- enable the refresh task in the service-discovery per default
- fix bug with ecommerce cache dashboard
- fix some grafana 5 dashboards
- create team prefixed docker-compose files
- fix bug for content server detection when the hostname was 'localhost'


1810

- remove postgres support in data-collector
- support multiple installations of CAE(Live) on one host
