@@ -3,12 +3,12 @@ class CMGrafana < Grafana::Client
 
   module Version
 
-    VERSION = '2.4.1'
+    VERSION = '2.4.2'
   end
 
   module Date
 
-    DATE = '2018-09-14'
+    DATE = '2018-09-17'
   end
 
 end
