@@ -106,7 +106,7 @@
           <form class="uk-form-small uk-form-horizontal uk-grid-small uk-grid" uk-grid="">
             <div class="uk-width-1-2@s uk-inline uk-first-column">
               <span class="uk-form-icon uk-icon cm-form-icon" uk-icon="icon: laptop"></span>
-              <input id="add-host-text" class="uk-input" type="text" placeholder="please use an hostname or FQDN to monitor an CoreMedia Testsystem">
+              <input id="add-host-text" class="uk-input" type="text" placeholder="please use a hostname or FQDN to monitor a CoreMedia testsystem">
             </div>
             <div class="uk-width-1-4@s">
               <button id="add-host-button" class="uk-button uk-button-primary">add</button>
