@@ -1,9 +1,13 @@
+
+## ---------------------------------------------------
+
 MYSQL_ROOT_PASSWORD=database.pass
 IDO_PASSWORD=ido.pass
 VISUALISATION_HOST=nginx
 
 CERT_SERVICE_BA_USER=foofoo
 CERT_SERVICE_BA_PASSWORD=barbar
+
 ## ---------------------------------------------------
 
 
@@ -26,4 +30,5 @@ MEMCACHE_HOST: memcached
 # LDAP_BASE_DN: ${LDAP_BASE_DN}
 # LDAP_GROUP_DN: ${LDAP_GROUP_DN}
 # LDAP_SEARCH_FILTER: ${LDAP_SEARCH_FILTER}
+
 ## ---------------------------------------------------
